Rename calculator to 'Kalkulator Hitung Keuntungan'

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kalkulator Keuntungan Multi-Varian (Final)</title>
+    <title>Kalkulator Hitung Keuntungan</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h2>💰 Kalkulator Keuntungan Multi-Varian</h2>
+        <h2>💰 Kalkulator Keuntungan</h2>
         
         <h3>Data Keuangan (Dari Rincian Pesanan)</h3>
         <div class="input-group">
@@ -23,7 +23,7 @@
         <h3>Data Biaya (Potongan Platform)</h3>
         <div class="input-group">
             <label for="biayaProsesPesanan">3. Biaya Proses Pesanan (Rp):</label>
-            <input type="number" id="biayaProsesPesanan" placeholder="Contoh: 1000" value="0">
+            <input type="number" id="biayaProsesPesanan" placeholder="Contoh: 1250" value="0">
         </div>
         <div class="input-group">
             <label for="persenAdmin">4. Persentase Komisi/Admin (Contoh: 8 untuk 8%):</label>
@@ -35,7 +35,7 @@
         <div class="varian-header">
             <span class="header-name">Varian/Nama Barang</span>
             <span class="header-qty">Jumlah beli (pcs)</span>
-            <span class="header-modal">Modal (Harga Beli) per pcs (Rp)</span>
+            <span class="header-modal">Modal (Harga Beli) per 1 pcs (Rp)</span>
             <span class="header-action"></span>
         </div>
         
@@ -65,4 +65,5 @@
     </div>
     <script src="script.js"></script>
 </body>
+
 </html>
